<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_more"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="a9chou.com.fangjiazhuangApp.module.activity.MoreActivity">

    <include layout="@layout/shyk_title"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dzzgl"
            style="@style/more_text_style1"
            android:drawableTop="@drawable/dangwuguanli"
            android:text="@string/dzzgl"/>

        <TextView
            android:id="@+id/ghgzgl"
            style="@style/more_text_style1"
            android:drawableTop="@drawable/gonghuiguanli"
            android:text="@string/ghgzgl"/>

        <TextView
            android:id="@+id/tqgzgl"
            style="@style/more_text_style1"
            android:drawableTop="@drawable/tuanqingguanli"
            android:text="@string/tqgzgl"/>

        <TextView
            android:id="@+id/jjjcgl"
            style="@style/more_text_style1"
            android:drawableTop="@drawable/jijianguanli"
            android:text="@string/jjjcgl"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/qywh"
            style="@style/more_text_style1"
            android:drawableTop="@drawable/rongyu"
            android:text="@string/qywh"/>

        <TextView
            android:id="@+id/dt"
            style="@style/more_text_style1"
            android:drawableTop="@drawable/liangxueyizuo"
            android:text="@string/dt"/>

        <TextView
            style="@style/more_text_style1"
            android:text="                       "/>

        <TextView
            style="@style/more_text_style1"
            android:text="                    "/>
    </LinearLayout>
</LinearLayout>
