<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="a9chou.com.fangjiazhuangApp.module.activity.GhgzglActivity">

    <include layout="@layout/shyk_title"></include>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/centerbg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="57px"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="20px"
                    android:layout_height="55px"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="38px"
                    android:src="@color/text_red" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20px"
                    android:text="@string/xxl"
                    android:textColor="@color/text_red"

                    android:textSize="52px" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_marginTop="19px"
                android:background="@color/line_color"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="63px"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/khnr"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/zonghe"
                    android:text="@string/zhdzb" />

                <TextView
                    android:id="@+id/djkh"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/jingying"
                    android:text="@string/jydzb" />

                <TextView
                    android:id="@+id/dlkh"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/gongcheng"
                    android:text="@string/gcdzb" />

                <TextView
                    android:id="@+id/ghkh"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/yunxing"
                    android:text="@string/yxdzb" />

            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="63px"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tqkh"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/shebei"
                    android:text="@string/sbdzb" />
                <TextView
                    android:id="@+id/dyxxt"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/dangyxx"
                    android:visibility="invisible"
                    android:text="@string/dyxx" />

                <TextView
                    android:id="@+id/zzgxxxt"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/zhuanruzc"
                    android:visibility="invisible"
                    android:text="@string/dyjz" />

                <TextView
                    android:id="@+id/dyldxxt"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/ldxx"
                    android:visibility="invisible"
                    android:text="@string/dyldxx" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
