<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="a9chou.com.fangjiazhuangApp.module.activity.GhgzglActivity">

    <include layout="@layout/shyk_title"></include>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/centerbg"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="63px"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/share1"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/zhibuweiyuan"
                    android:text="@string/zbwy" />

                <TextView
                    android:id="@+id/share2"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/sanhui"
                    android:text="@string/shyk" />

                <TextView
                    android:id="@+id/share3"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/guiding"
                    android:text="@string/gddzqd" />

                <TextView
                    android:id="@+id/share4"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/guizhi"
                    android:text="@string/zbgz" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="63px"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/share5"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/niandujihua"
                    android:text="@string/ndjh" />

                <TextView
                    android:id="@+id/share6"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/dangyxx"
                    android:text="@string/dyxx" />

                <TextView
                    android:id="@+id/share7"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/daodejiangt"
                    android:text="@string/ddjt" />

                <TextView
                    android:id="@+id/share9"
                    style="@style/more_text_style"
                    android:drawableTop="@drawable/gongkai"
                    android:text="@string/dwgk" />

            </LinearLayout>



            <!--<View-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="2px"-->
                <!--android:layout_marginTop="19px"-->
                <!--android:background="@color/line_color"></View>-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginTop="57px"-->
                <!--android:orientation="horizontal">-->

                <!--<ImageView-->
                    <!--android:id="@+id/imageView2"-->
                    <!--android:layout_width="20px"-->
                    <!--android:layout_height="55px"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_marginLeft="38px"-->
                    <!--android:src="@color/text_red" />-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_gravity="center"-->
                    <!--android:layout_marginLeft="20px"-->

                    <!--android:text="@string/xxl"-->
                    <!--android:textColor="@color/text_red"-->

                    <!--android:textSize="52px" />-->
            <!--</LinearLayout>-->
        </LinearLayout>
    </ScrollView>


</LinearLayout>
