<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_threee_lssons"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="a9chou.com.fangjiazhuangApp.module.activity.ThreeeLssonsActivity">

    <include layout="@layout/home_title"></include>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/centerbg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="57px"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20px"
            android:layout_height="55px"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginLeft="38px"
            android:src="@color/text_red"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20px"

            android:text="@string/xxl"
            android:textColor="@color/text_red"

            android:textSize="52px"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="19px"
        android:background="@color/line_color"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="63px"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/zbdyh"
            style="@style/more_text_style"
            android:drawableTop="@drawable/tqgl"
            android:text="@string/zbdyh"/>
        <TextView
            android:id="@+id/zbwyh"
            style="@style/more_text_style"
            android:drawableTop="@drawable/tqhd"
            android:text="@string/zbwyh"/>
        <TextView
            android:id="@+id/dxzh"
            style="@style/more_text_style"
            android:drawableTop="@drawable/dangwuguanli"
            android:text="@string/dxzh"/>
        <TextView
            android:id="@+id/wdk"
            style="@style/more_text_style"
            android:drawableTop="@drawable/tqgl"
            android:text="@string/wdk"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="63px"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/wdkfb"
            style="@style/more_text_style"
            android:drawableTop="@drawable/tqgl"
            android:text="@string/wdkfb"/>
        <TextView
            android:id="@+id/zbwyh1"
            style="@style/more_text_style"
            android:drawableTop="@drawable/tqhd"
            android:visibility="invisible"
            android:text="@string/zbwyh"/>
        <TextView
            android:id="@+id/dxzh1"
            style="@style/more_text_style"
            android:drawableTop="@drawable/dangwuguanli"
            android:visibility="invisible"
            android:text="@string/dxzh"/>
        <TextView
            android:id="@+id/wdk1"
            style="@style/more_text_style"
            android:drawableTop="@drawable/tqgl"
            android:visibility="invisible"
            android:text="@string/wdk"/>
    </LinearLayout>

</LinearLayout>

